--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -6,6 +6,7 @@
   <div id="hidden-information", style="display: none; margin-top: 10px; margin-right: 30px">
     <input data-autocomplete-source="/subjects" type="text" name="calendars[subject]" id="calendars_subject" class="lodgingComboSubjects">
     <input data-autocomplete-source="/teachers" type="text" name="calendars[teacher]" id="calendars_teacher" class="lodgingComboTeachers">
+    <input type="text" name="calendars[auditorium]" id="calendars_auditorium">
     <div class="help-container" style="margin-left: 30px">
       <%= link_to 'Save item', 'javascript:void(0)',  data: { turbolinks: false }, id: 'save-item', class: 'btn btn-outline-success btn-sm' %>
       <%= link_to 'Delete item', 'javascript:void(0)',  data: { turbolinks: false }, id: 'delete-item', class: 'btn btn-outline-danger btn-sm' %>
