--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -11,6 +11,7 @@
   <div class="help-container" style="display: flex; justify-content: center; margin-right: 20px; margin-top: 10px;">
     <input data-autocomplete-source="/subjects" type="text" name="calendars[subject]" id="calendars_subject" class="lodgingComboSubjects">
     <input data-autocomplete-source="/teachers" type="text" name="calendars[teacher]" id="calendars_teacher" class="lodgingComboTeachers">
+    <input type="text" name="calendars[auditorium]" id="calendars_auditorium">
     <%= link_to 'Delete item', 'javascript:void(0)', id: 'delete-item', class: 'btn btn-outline-danger btn-sm' %>
   </div>
 </div>
