--- a/app/views/timetables/edit.html.erb
+++ b/app/views/timetables/edit.html.erb
@@ -1,4 +1,3 @@
-<h1>Editing Timetable</h1>
 <p id="notice"><%= notice %></p>
 <div>
   <% 5.times do |i| %>
@@ -6,31 +5,31 @@
       <% case i %>
       <% when 0 %>
         <h4>Monday</h4>
-        <% @days = Day.where(calendars_id: Calendar.where(time_table_id: @timetable.id, day_of_week: 1).ids) %>
+        <% @days = Day.where(timetables_name: @timetable.id, calendars_id: -5) %>
       <% when 1 %>
         <h4>Tuesday</h4>
-        <% @days = Day.where(calendars_id: Calendar.where(time_table_id: @timetable.id, day_of_week: 2).ids) %>
+        <% @days = Day.where(timetables_name: @timetable.id, calendars_id: -4) %>
       <% when 2 %>
         <h4>Wednesday</h4>
-        <% @days = Day.where(calendars_id: Calendar.where(time_table_id: @timetable.id, day_of_week: 3).ids) %>
+        <% @days = Day.where(timetables_name: @timetable.id, calendars_id: -3) %>
       <% when 3 %>
         <h4>Thursday</h4>
-        <% @days = Day.where(calendars_id: Calendar.where(time_table_id: @timetable.id, day_of_week: 4).ids) %>
+        <% @days = Day.where(timetables_name: @timetable.id, calendars_id: -2) %>
       <% when 4 %>
         <h4>Friday</h4>
-        <% @days = Day.where(calendars_id: Calendar.where(time_table_id: @timetable.id, day_of_week: 5).ids) %>
+        <% @days = Day.where(timetables_name: @timetable.id, calendars_id: -1) %>
       <% end %>
       <div id="timetable-days">
         <ol>
-          <% @days.each do |value| %>
-            <li>
-              <div>
-                <input data-autocomplete-source="/subjects" value="<%= Subject.find_by(id: value) %>" type="text" name="calendars[subject]" id="calendars_subject" class="lodgingComboSubjects">
-                <input data-autocomplete-source="/teachers" value="<%= Teacher.find_by(id: value) %>" type="text" name="calendars[teacher]" id="calendars_teacher" class="lodgingComboTeachers">
-                <input type="text" value="<%= Day.find_by(auditorium: value)%>">
-                <%= link_to 'Delete item', 'javascript:void(0)', data: {turbolinks: false}, id: 'delete-timetable-item', class: 'btn btn-outline-danger btn-sm' %>
-              </div>
-            </li>
+          <% @days.each do |value|%>
+          <li>
+            <div>
+              <input data-autocomplete-source="/subjects" value="<%=  Subject.find_by(id: value.subjects_id).name %>" type="text" name="calendars[subject]" id="calendars_subject" class="lodgingComboSubjects">
+              <input data-autocomplete-source="/teachers" value="<%= Teacher.find_by(id: value.teachers_id).surname %> <%= Teacher.find_by(id: value.teachers_id).name %>" type="text" name="calendars[teacher]" id="calendars_teacher" class="lodgingComboTeachers">
+              <input type="text" value="<%= value.auditorium %>">
+              <%= link_to 'Delete item', 'javascript:void(0)', data: {turbolinks: false}, id: 'delete-timetable-item', class: 'btn btn-outline-danger btn-sm' %>
+            </div>
+          </li>
           <% end %>
         </ol>
         <%= link_to 'Add subject', 'javascript:void(0);', data: {turbolinks: false}, id: i, class: 'subject-timetable-add btn btn-success' %>
@@ -41,7 +40,7 @@
 
 <div class="footer">
   <%= link_to 'Save list', 'javascript:void(0)', data: {turbolinks: false}, class: 'btn btn-success submit-btn',
-              id: 'calendar-timetable-send-btn' %>
+              id: 'calendar-timetable-send-btn-edit' %>
   <%= link_to 'Delete list', 'javascript:void(0)', data: {turbolinks: false}, class: 'calendar-timetable-delete-btn btn btn-danger submit-btn',
               id: @timetable.id %>
   <%= link_to 'Back', timetables_path, data: {turbolinks: false}, class: 'btn btn-outline-dark' %>
