Add timetable styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,10 @@
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="/teachers">Teachers <span class="sr-only">(current)</span></a>
-            </li>                  
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/timetables">Timetables <span class="sr-only">(current)</span></a>
+            </li>
           </ul>
         </div>
     </nav>  
