--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -5,7 +5,7 @@
     <%= f.input :date, as: :string, input_html: { class: 'datepicker', placeholder: 'Select day'} %>
   <%end%>
 
-  <input data-autocomplete-source="/timetables" placeholder="timetable" type="text" name="timetable[name]" id="calendars_timetables" class="lodgingComboTimetables">
+  <input data-autocomplete-source="/timetables" placeholder="Timetable" type="text" name="timetable[name]" id="calendars_timetables" class="lodgingComboTimetables", style="margin-left: 150px; margin-top: 10px; margin-bottom: 10px; border-radius: 5px 5px 5px 5px">
 
    <div class="content">
     <div class="container-ajax" id="container">
