--- a/app/views/timetables/_form.html.erb
+++ b/app/views/timetables/_form.html.erb
@@ -1,15 +1,18 @@
+<div class="content">
+  <%= simple_form_for(@timetable) do |f| %>
+    
+    <%= f.error_notification %>
+    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+    
+    <div class="form-inputs">
+      <%= f.input :name %>
+      <%= f.input :from, as: :string, input_html: { class: 'datepicker'} %>
+      <%= f.input :to, as: :string, input_html: { class: 'datepicker'} %>
+    </div>
 
-<%= simple_form_for(@timetable) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+    <div class="form-actions", style="margin-left: 45px; margin-top: 10px">
+      <%= f.button :submit, class: 'btn btn-success' %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :from, as: :string, input_html: { class: 'datepicker'} %>
-    <%= f.input :to, as: :string, input_html: { class: 'datepicker'} %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+  <% end %>
+</div>
