--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -2,30 +2,34 @@
 
 <h1>Timetables</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>From</th>
-      <th>To</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @timetables.each do |timetable| %>
+<div class="content">
+  <table>
+    <thead>
       <tr>
-        <td><%= timetable.name %></td>
-        <td><%= timetable.from %></td>
-        <td><%= timetable.to %></td>
-        <td><%= link_to 'Show', timetable %></td>
-        <td><%= link_to 'Edit', edit_timetable_path(timetable) %></td>
-        <td><%= link_to 'Destroy', timetable, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>From</th>
+        <th>To</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @timetables.each do |timetable| %>
+        <tr>
+          <td><%= timetable.name %></td>
+          <td><%= timetable.from %></td>
+          <td><%= timetable.to %></td>
+          <td><%= link_to 'Show', timetable, class: 'btn btn-info btn-sm' %></td>
+          <td><%= link_to 'Edit', edit_timetable_path(timetable), class: 'btn btn-warning btn-sm' %></td>
+          <td><%= link_to 'Destroy', timetable, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <br>
 
-<%= link_to 'New Timetable', new_timetable_path %>
+<div class="footer">
+  <%= link_to 'New Timetable', new_timetable_path, class: 'btn btn-success' %>
+</div>
