--- a/app/views/timetables/new.html.erb
+++ b/app/views/timetables/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Timetable</h1>
 
 <%= render 'form', timetable: @timetable %>
-
-<%= link_to 'Back', timetables_path %>
+<div class="footer">
+    <%= link_to 'Back', timetables_path, class: 'btn btn-secondary' %>
+</div>
