--- a/app/views/timetables/show.html.erb
+++ b/app/views/timetables/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<div>
+<div class="content", style="margin-left: 50px; margin-top: 100px;">
   <% 5.times do |i| %>
     <div id="<%= @timetable.id %>" class="days-of-week">
       <% case i %>
@@ -16,13 +16,13 @@
       <% end %>
       <div id="timetable-days">
         <ol>
-          <li>
+          <li style="margin-left: -35px">
             <div>
               <input data-autocomplete-source="/subjects" placeholder="Subject" type="text" name="calendars[subject]" id="calendars_subject" class="lodgingComboSubjects">
               <input data-autocomplete-source="/teachers" placeholder="Teacher" type="text" name="calendars[teacher]" id="calendars_teacher" class="lodgingComboTeachers">
               <input type="text" placeholder="Auditorium">
               <%= link_to 'Delete item', 'javascript:void(0)', data: {turbolinks: false}, id: 'delete-timetable-item', class: 'btn btn-outline-danger btn-sm' %>
-              <%= link_to 'Add denominator', 'javascript:void(0)', data: {turbolinks: false}, id: 'add-denominator', class: 'btn btn-outline-success btn-sm' %>
+              <%= link_to 'Add', 'javascript:void(0)', data: {turbolinks: false}, id: 'add-denominator', class: 'btn btn-outline-success btn-sm' %>
             </div>
           </li>
         </ol>
@@ -32,7 +32,7 @@
   <% end %>
 </div>
 
-<div class="footer">
+<div class="footer", style="margin-top: 100px">
   <%= link_to 'Save list', 'javascript:void(0)', data: {turbolinks: false}, class: 'btn btn-success submit-btn',
               id: 'calendar-timetable-send-btn' %>
   <%= link_to 'Delete list', 'javascript:void(0)', data: {turbolinks: false}, class: 'calendar-timetable-delete-btn btn btn-danger submit-btn',
